--- a/index.html
+++ b/index.html
@@ -1,11 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="author" content="pagina creada por Jhon Jairo Marín Díaz"/>
+    <meta name="description" content="pagina html hoja de vida"/>
+    <script src="https://kit.fontawesome.com/16d365cb18.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css"/>
     <title>Hoja de Vida</title>
 </head>
 <body>
-    
+    <header class="encabezado">
+        <h1>Hoja de Vida</h1>
+    </header>
+    <div class="row">
+    <div class="column" id="container1">
+        <h1>Información Personal</h1>
+        <img class="foto" src="img/foto.jpg" alt="Foto de Perfil" >
+        <i class="fa-solid fa-user"></i><h3>Nombre:</h3>
+        <h4>Jhon Jairo Marín Díaz</h4>
+        <br>
+        <i class="fa-solid fa-house"></i><h3>Dirección:</h3>
+        <h4>Cra 2w #16g-02 Villamarcela 2 T6 Apto 104</h4>
+        <br>
+        <i class="fa-solid fa-envelope"></i><h3>Email:</h3>
+        <h4>jhonjairomarindiaz@gmail.com</h4>
+        <br>
+        <i class="fa-solid fa-phone-volume"></i><h3>Teléfono:</h3>
+        <h4>3124198288</h4>
+        <br>
+        <i class="fa-brands fa-github"></i><h3>Link GitHub:</h3>
+        <a href="https://github.com/JhonJMD" target="_blank"><h4>JhonJMD</h4></a>
+        <br>
+        <i class="fa-brands fa-linkedin"></i><h3>Link Linkendin:</h3>
+        <a href="https://www.linkedin.com/in/jhon-jairo-mar%C3%ADn-d%C3%ADaz-0685182a4/" target="_blank"><h4>Jhon Jairo Marín Díaz</h4></a>   
+        <hr>
+    </div>    
+    <div class="column" id="container2">
+        <h1>Información Académica</h1>
+        <i class="fa-solid fa-school"></i><h3>Basica Primaria:</h3>
+        <h4>Colegio Humberto Gomez Nigrinis</h4>
+        <br>
+        <i class="fa-solid fa-graduation-cap"></i><h3>Bachillerato:</h3>
+        <h4>Colegio Humberto Gomez Nigrinis</h4>
+        <br>
+        <i class="fa-solid fa-building-columns"></i><h3>Tecnologia:</h3>
+        <h4>Desarrollo de Sistemas Informaticos (Cursando)</h4>
+        <br>
+        <i class="fa-solid fa-lines-leaning"></i><h3>Cursos:</h3>
+        <h4>Industrias Creativas (Mision TIC 2022)</h4>
+        <br>
+        <h1>Habilidades</h1>
+        <i class="fa-solid fa-cubes"></i><h3>Stack Tecnológico</h3>
+        <br>
+        <img class="logo" src="img/html-5.png" alt="html">
+        <img class="logo" src="img/css-3.png" alt="css">
+        <img  class="logo" src="img/python.png" alt="python"> 
+        <img  class="logo" src="img/postgre.png" alt="postgres"> 
+        <img  class="logo" src="img/java.png" alt="java"> 
+        <i class="fa-solid fa-code"></i><h3>Nivel de Stack Tecnológico</h3> 
+        <br>
+        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+        <hr class="margen1">
+    </div>
+    <div class="column" id="container3">
+        <h1>Proyectos Personales</h1>
+        <i class="fa-solid fa-truck-moving"></i><h3>Administracion de Inventario:</h3>
+        <h4>Sistema de Gestión de Inventario para empresa Tecni-Inyecciones en lenguaje Java</h4>
+        <h3>Nivel:</h3>
+        <h4>Intermedio</h4>
+        <h1>Contactos</h1>
+        <i class="fa-solid fa-user"></i><h3>Nombre:</h3>
+        <h4>Juan Jose Basto Gonzalez</h4>
+        <br>
+        <i class="fa-solid fa-envelope"></i><h3>Email:</h3>
+        <h4>juanjosebasto79@gmail.com</h4>
+        <br>
+        <i class="fa-solid fa-phone-volume"></i><h3>Teléfono:</h3>
+        <h4>3163990932</h4>
+        <hr>
+        <i class="fa-solid fa-user"></i><h3>Nombre:</h3>
+        <h4>Johan Alexander Garcia Campos</h4>
+        <br>
+        <i class="fa-solid fa-envelope"></i><h3>Email:</h3>
+        <h4>garciacamposjohan18@gmail.com</h4>
+        <br>
+        <i class="fa-solid fa-phone-volume"></i><h3>Teléfono:</h3>
+        <h4>3017079264</h4>
+        <hr class="margen2">
+    </div>
+    </div>
 </body>
 </html>
